# Smart_Tonometer_website

./: .replit  LICENSE  README.md  app.py  app1.py  app2.py  home.html  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  requirements1.txt  tailwind.config.js
attached_assets/: Pasted--doctype-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1739117166248.txt
static/css/: style.css
templates/: base.html  dashboard.html  doctor-suggestion.html  home.html  previous-records.html  signup.html  style.css
