[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

[tool.poetry.dependencies]
flask = "^2.3.3"  # Make sure Flask is included
tailwindcss = "^3.0.0"  # Include Tailwind CSS
postcss = "^8.0.0"  # Include PostCSS, adjust version as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api